--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,17 @@ body{
 	width: 100%;
 
 }
+
 .quickview-title{
 	width: 100%;
 	padding: 10px 0;
 	text-align: center;
-	background-color: rgba(255,120,0,0.9);
+	background-color: #ddd;
 	position: absolute;
 	top: -100%;
 	left: 0;
 	font-size: 18px;
-	font-weight: bold;
-	color: #ffffff;
+	color: Black;
 	cursor: pointer;
 	opacity: 0;
 	-webkit-transition: 300ms;
@@ -82,7 +82,7 @@ body{
 	transform: translate(-50%, -50%);
 	-webkit-transform: translate(-50%, -50%);
 	-moz-transform: translate(-50%, -50%);
-	background-color: #ffffff;
+	background-color: White;
 	z-index: 100;
 }
 .close-btn{
@@ -104,6 +104,7 @@ body{
 }
 .product-big-image img{
 	width: 100%;
+	max width: auto;
 }
 .product-big-desc{
 	width: 48%;
@@ -129,7 +130,7 @@ body{
 	float: left;
 	margin:0px;
 	padding-bottom: 15px;
-	color: #808080;
+	color: Black;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
@@ -146,13 +147,7 @@ body{
 	float: left;
 	padding-bottom: 15px;
 }
-.price .oldprice{
-	font-size: 28px;
-	margin: 0px;
-	color: #a3a3a3;
-	border-bottom:1px solid #333;
-	display: inline-block;
-	width: auto;
+
 }
 .price .oldprice sup{
 	color: #ff7800;
@@ -174,7 +169,7 @@ body{
 	border: 2px solid red;
 	display: inline-block;
 	padding: 20px;
-	color: red;
+	background-position: white;
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
@@ -183,4 +178,105 @@ body{
 	letter-spacing: 1px;
 	font-family: Courier;
 	font-weight: 400;
+}
+
+/* Style inputs, select elements and textareas */
+input[type=text], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+/* Style the label to display next to the inputs */
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  background-color: red;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+/* Style the container */
+.container3 {
+  border-radius: 5px;
+  background-color: white;
+  padding: 20px;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+/* Style the form element with a border around it */
+form {
+    border: 4px solid white;
+}
+
+/* Add some padding and a grey background color to containers */
+.container4 {
+    padding: 20px;
+    background-color: White;
+}
+
+/* Style the input elements and the submit button */
+input[type=text], input[type=submit] {
+    width: 100%;
+    padding: 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Add margins to the checkbox */
+input[type=checkbox] {
+    margin-top: 16px;
+}
+
+/* Style the submit button */
+input[type=submit] {
+    background-color: red;
+    color: white;
+    border: none;
+		margin-bottom: 10px;
+}
+
+input[type=submit]:hover {
+    opacity: 0.8;
 }
